--- a/repolinter-rulesets/default.yaml
+++ b/repolinter-rulesets/default.yaml
@@ -41,7 +41,7 @@ rules:
       type: file-starts-with
       options:
         globsAll:
-        - "**/*.{c,cc,c++,go,java,js,py,scala}"
+        - "**/*.{c,cc,c++,go,java,js,py,rb,scala}"
         - "!node_modules/**"
         lineCount: 5
         patterns:
