repolinter: remove requirement for codemeta file
We need to do a little more work on what exactly we want to have in
these files before requiring them for all projects

--- a/repolinter-rulesets/default.yaml
+++ b/repolinter-rulesets/default.yaml
@@ -50,15 +50,15 @@ rules:
         flags: i
     policyUrl: http://go/oss-licensing
 
-  codemeta-file-exists:
-    level: error
-    rule:
-      type: file-existence
-      options:
-        globsAny:
-        - codemeta.json
-        - codemeta.yaml
-        nocase: true
+# codemeta-file-exists:
+#   level: error
+#   rule:
+#     type: file-existence
+#     options:
+#       globsAny:
+#       - codemeta.json
+#       - codemeta.yaml
+#       nocase: true
 
   readme-file-exists:
     level: error
